# jfimbett.github.io

./: .gitignore  CHANGELOG.md  MAINTENANCE_GUIDE.md  README.md  about.md  alphagen.html  bfi.html  blog.html  code.html  contact.md  cornify.js  df_signal.csv  downloads_tweets.py  eap.html  fake_panel_data.csv  index.html  index2.html  minecraft_comments  notes.md  papers.html  presentation_2024_frontiers.html  project_eap.html  pyproject.toml  readme.md  research.html  research.md  research_base.html  script.js  style.css  teaching.html  teaching_lux.html  test.html  thanks.md
_layouts/: default.html
assets/: PyFolioAnalysisAlphaGen.ipynb  PyFolioAnalysisAlphaGenMoreLong.ipynb  alphagen.html  alphagen.jfif  alphagen.js  alphagenTest.html  collapsejs.jl  csvTRPF.csv  graph.html  graphTest.html  html_toembed.html  strategy.csv
blog/: quantum_black_scholes.html  transformers.html
chart.js/: package.json
code/: command.tex  repec2bibtex.py
courses/: bfi.html  eap.html  practical_exercise.ipynb
data/: main.d653d910ff1c4a5b9a4e.js  minified-10612e8f01c8c191917dfaed1fbc78bd.js  minified-264c22a9ceb75519e48d564234a2a285.css  minified-2ce8052867cc56d3708795446ac12ece.css  minified-383ef49ce5f513404820bffb3aff14e8.css  minified-5e5b6f139bb356f365ab24198b7c33b6.js  minified-67bdb0a17c5be3039d1755c7ecd2e2e6.css  minified-6dbcdbeaa354b3ff264700d69e4fc333.js  minified-730b1fd240cc6f60184b43b3d1c766b7.js  minified-78128b72721fb029b708c5000d861e38.js  minified-78c7fb04771253db3744d40b138f80c5.js  minified-87cd6f2ff1171cdc6b51e64d29474a30.js  polyfills.921e22471ff1fb602a28.js  (+10 more)
(+153 files in other folders)
